# ClipHelper

./: .timetracker  Cargo.toml  IMPLEMENTATION_PLAN.md  MediaController_Plan.md  README.md  test_video_frame.rs
.github/: copilot-instructions.md
docs/: AUDIO_CONFIRMATION.md
src/: main.rs
src/audio/: confirmation.rs  device_manager.rs  mod.rs  sound_generator.rs
src/core/: clip.rs  config.rs  config_test.rs  file_monitor.rs  mod.rs
src/gui/: app.rs  app_test.rs  clip_list.rs  clip_list_renderer.rs  controls.rs  mod.rs  timeline.rs
src/hotkeys/: events.rs  manager.rs  mod.rs  tests.rs
src/video/: async_video_info.rs  audio_player.rs  audio_player_complete.rs  audio_player_simple.rs  embedded_player.rs  ffmpeg_manager.rs  hover_thumbnails.rs  media_controller.rs  media_controller_new.rs  mod.rs  preview.rs  preview_new.rs  processor.rs  smart_thumbnail.rs  thumbnail.rs  waveform.rs
