[package]
name = "clip-helper"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI Framework
egui = "0.28"
eframe = { version = "0.28", default-features = false, features = ["default_fonts", "glow", "persistence"] }

# Global hotkeys
global-hotkey = "0.5"
winit = "0.29"

# File system operations
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "6.1"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Logging
log = "0.4"
env_logger = "0.10"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Audio waveform generation
hound = "3.5"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Directory utilities
dirs = "5.0"

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]
